--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ img {
   /* top: 0; */
   z-index: 15;
 }
-@media(max-width:1024px) {
+@media (max-width: 1024px) {
   .topbar {
     justify-content: start;
   }
@@ -143,7 +143,7 @@ img {
   text-align: center;
 }
 @media (max-width: 1024px) {
-  .header_logo{
+  .header_logo {
     width: 90%;
   }
   .header_slogan {
@@ -354,6 +354,7 @@ img {
   display: flex;
   justify-content: space-around;
   align-content: space-around;
+  flex-direction: column;
 }
 @media (max-width: 1024px) {
   .main .comments_slide {
