--- a/styles/style.css
+++ b/styles/style.css
@@ -161,13 +161,13 @@ img {
   background: #fff;
 }
 .main .section_dark {
-  background-color: #474a56;
+  background-color: rgba(71, 74, 86, 0.5);
 }
 .main .section_dark .heading {
   color: #fff;
 }
 .main .section_light {
-  background-color: #ced7fd;
+  /* background-color: #ced7fd; */
 }
 .main .gallery {
   padding: 1px 0;
@@ -262,7 +262,7 @@ img {
   text-align: center;
   justify-content: center;
   align-items: center;
-  background: #000934;
+  background: #000000;
   color: #fff;
   font-size: 1.2em;
   border-radius: 50px;
@@ -272,6 +272,9 @@ img {
     width: 80%;
   }
 }
+.main .how_we_work-heading {
+  padding-bottom: 2vh;
+}
 .main .how_we_work {
   padding-bottom: 5vh;
 }
@@ -279,27 +282,43 @@ img {
   margin: 0 auto;
   width: 90%;
   position: relative;
+  padding: 4vh 0;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
 }
 .main .how_we_work__item {
   width: 100%;
   display: flex;
+  justify-content: space-between;
   position: relative;
+  border-radius: 20px;
+  background: #e1e1e1;
+  margin: 2vh 0;
+  border: 2px solid #474a56;
 }
 .main .how_we_work__item .item_block {
-  margin: 1vh 0;
-  width: 60%;
   height: 30vh;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5%;
   box-sizing: border-box;
-  background: #6f7aad;
-  font-size: 2em;
+  font-size: x-large;
   text-align: center;
   z-index: 1;
 }
+.main .how_we_work__item .item_block--right {
+  background: #bcbcbc;
+  width: 60%;
+  text-align: left;
+  border-radius: 20px;
+  justify-content: start;
+}
 @media (max-width: 1024px) {
+  .main .how_we_work__item {
+    flex-direction: column;
+  }
   .main .how_we_work__item .item_block {
     width: 100%;
   }
@@ -311,9 +330,9 @@ img {
 }
 .main .comments_slide {
   width: 100%;
-  height: 65vh;
-  flex-wrap: wrap;
+  height: 75vh;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-content: space-around;
   flex-direction: column;
@@ -325,13 +344,14 @@ img {
   }
 }
 .main .comments_slide_add {
-  width: 100%;
+  width: 90vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2vh;
 }
 .main .comments_slide_add .comments_add_form {
-  background-color: rgba(111, 122, 173, 0.8);
+  background-color: #535353;
   width: 50%;
   margin: 0 auto;
   border: 1px solid #fff;
@@ -375,16 +395,17 @@ img {
 }
 .main .comments__item {
   box-sizing: border-box;
-  width: 49%;
+  width: 45%;
   min-height: 30vh;
   padding: 2vh 2vw;
+  margin: 2vh 0;
   display: flex;
   color: #fff;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   border-radius: 20px;
-  background-color: rgba(111, 122, 173, 0.8);
+  background-color: #535353;
 }
 @media (max-width: 1024px) {
   .main .comments__item {
@@ -433,7 +454,7 @@ img {
   justify-content: space-evenly;
   padding: 5vh 4vw;
   height: 70vh;
-  background-color: rgba(111, 122, 173, 0.8);
+  background-color: rgba(108, 108, 108, 0.8);
 }
 @media (max-width: 1024px) {
   .main .application_form__body {
@@ -466,7 +487,7 @@ img {
 
 .footer {
   position: relative;
-  background: #1a1e2e;
+  background: #474a56;
   height: 50vh;
   padding: 20px;
   box-sizing: border-box;
